# pixel-to-world-converter

./: .gitignore  README.md  compare_outputs.py  convert_tracks_to_gps.py  plot_trajectory_comparison.py  pyproject.toml
fish_tracking/: __init__.py  readme.md
fish_tracking/common/: __init__.py  animation_smoother.py  extract_frames.py  globals.py  kalman_filter.py  math_utils.py  path_manager.py  video_data.py
fish_tracking/common/camera_utils/: camera.py  camera_handler.py
fish_tracking/evaluation/: __init__.py  display_trajectories.py
fish_tracking/pixel_to_world/: __init__.py  buffer.py  compute_statistics.py  convert_pixel_to_world.py  rts_smoother.py  run_dronePose.py  trajectory_processor.py
fish_tracking/pixel_tracking/: __init__.py  compute_pixel_trajectories.py  particle_filter.py  tracker.py
pixel_to_gps/: __init__.py  config.py  pipeline.py  schema.py
pixel_to_gps/pose_estimation/: extrinsics.py  kalman.py  smoother.py
pixel_to_gps/preprocessing/: __init__.py  sensor_alignment.py
pixel_to_gps/projection/: pixel_to_world.py  trajectory.py
pixel_to_gps/utils/: __init__.py  geometry.py  transforms.py
pixel_to_world_converter/: __init__.py  config.py  converter.py  pipeline.py  schema.py
pixel_to_world_converter/pose_estimation/: __init__.py  smoother.py
pixel_to_world_converter/projection/: __init__.py  homography.py  trajectory.py
