[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-to-world-converter"
version = "1.0.0"
description = "Convert pixel coordinates from drone video tracking to world GPS coordinates"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["gps", "computer-vision", "drone", "tracking", "coordinate-conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "opencv-python>=4.5.0",
    "pymap3d>=2.9.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pixel-to-world-converter"
Repository = "https://github.com/yourusername/pixel-to-world-converter"

[tool.setuptools.packages.find]
where = ["."]
include = ["pixel_to_world_converter*"]
exclude = ["tests*"]
